--- a/border_radius_shadow/index.html
+++ b/border_radius_shadow/index.html
@@ -61,8 +61,15 @@
 </div>
 
 
+<div class="params">
+	<span>Размер шрифта в rem</span>
+	<input type="range" min="0" max="20" step="0.1" id="range_size" value="0">
+</div>
 
-<div class="result"></div>
+
+<div class="result">
+	<span class="txtsize">Текст</span>
+</div>
 
 <script src="script.js"></script>
 </body>
